Mobile formatting complete

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
 <body class="pp_body">
   <div class="title">
-    <h1>Q4 2020 Marketing spend budget</h1>
+    <h1>2020 Marketing spend budget</h1>
   </div>
   <div class="container">
     <div class="allocations">
       <div class="starting-budget">
-        <h2>Stated budget:</h2>
+        <h2>Budget:</h2>
         <span id="budget"></span>
       </div>
       <div class="total-allocated">
-        <h2>Total Allocated:</h2>
-        <span id="allocated">0</span>
+        <h2>Allocated:</h2>
+        <span id="allocated">£0</span>
       </div>
       <div class="remaining-budget">
         <h2>Remaining Budget:</h2>
@@ -64,7 +64,7 @@
           <div class="slide_total">-</div>
         </div>
       </div>
-      <!-- <button id="mybtn">Display</button> -->
+
     </div>
   </div>
 
